2007-08-15  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Project/CProject.cs: Write all directories with header files to the
	  project's pkg-config package.

2007-08-14  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* gtk-gui/CBinding.OutputOptionsPanel.cs, gtk-gui/gui.stetic: Make output
	  entry editable.

2007-08-14  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Project/CProjectServiceExtension.cs: Update the project's pkg package
	  every time it is compiled.

2007-08-13  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/EditPackagesDialog.cs, ProjectPad/ProjectPackagesFolderNodeBuilder.cs,
	  Project/CProjectConfiguration.cs, Project/CProject.cs: Allow CProjects
	  to depend on other CProjects that compile into a shared object as well
	  as static libraries.

2007-08-13  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/DataProvider.cs, CBinding.addin.xml, Navigation/UnionNodeBuilder.cs:
	  Added the  union icons to the stock icons so I don't have to create my
	  own pixbuf in the union node builder and now I can use the proper union
	  icon in the completion widget.

2007-08-12  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Parser/TagDatabaseManager.cs: Parse functions from it's prototype if
	  possible instead of waiting for the implementation, if it is an inline
	  function parse it with that.

2007-08-12  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* CBinding.addin.xml, ProjectPad/ProjectResourcesExtension.cs, Makefile.am:
	  Hide the resources node in the project pad for CProjects.

2007-08-12  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* CBinding.addin.xml: Added the paste command to the packages folder node's
	  context menu and the copy command to the package node's context menu.

2007-08-11  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Project/CProjectConfiguration.cs: Make paths relative to project folder.

2007-08-09  Marcos David Marín Amador <MarcosMarin@gmail.com> 